MySQLの文字コードを「utf8mb4」にした。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,11 @@ services:
     container_name: "laravel-study_mysql"
     environment: 
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=sample
       - MYSQL_USER=sample
       - MYSQL_PASSWORD=sample
-      - MYSQL_DATABASE=sample
+      - TZ=Asia/Tokyo
+    volumes: 
+      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
     ports: 
       - 3306:3306
