--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     container_name: "laravel-study_nginx"
     depends_on: 
       - php
+    links:
+      - php:phpfpm
+    volumes:
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports: 
       - "8080:80"
   php:
@@ -15,7 +19,8 @@ services:
     environment: 
       DB_HOST: mysql
     volumes: 
-      - ./:/src
+      - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+      - ./:/var/www
   mysql:
     build: 
       context: ./docker/mysql
