--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+DB_ROOT_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
