--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -42,3 +42,13 @@ server {
     #    deny  all;
     #}
 }
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+    ssl_certificate     /etc/nginx/server.crt;
+    ssl_certificate_key /etc/nginx/server.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;  
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+}
