--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,11 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 443 ssl;
+    server_name localhost;
+    ssl_certificate     /etc/nginx/server.crt;
+    ssl_certificate_key /etc/nginx/server.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;  
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
@@ -8,6 +13,8 @@ server {
     location / {
         root   /var/www/public;
         index  index.html index.htm index.php;
+
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
     #error_page  404              /404.html;
@@ -43,12 +50,3 @@ server {
     #}
 }
 
-server {
-    listen 443 ssl;
-    server_name localhost;
-    ssl_certificate     /etc/nginx/server.crt;
-    ssl_certificate_key /etc/nginx/server.key;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;  
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-}
