Add mysql image.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,13 @@ jobs:
       # - image: circleci/mysql:5.7-ram
       #
       # - image: redis:2.8.19
-
+      - image: circleci/mysql:8.0.20-ram
+        command: mysqld --default-authentication-plugin=mysql_native_password
+        environment:
+          MYSQL_USER: forge
+          MYSQL_DATABASE: forge
+          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_PASSWORD: "forge"
     steps:
       - checkout
 
